changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

types/shop_inventory/shop_inventory.c: Use size_t not int when working with
  list sizes. The variable i is used for several things, but using size_t should
  be safe for all uses of it.
Arvid Norlander 2009-02-07

types/deep_swamp/deep_swamp.c: Replace sprintf() with snprintf().
Arvid Norlander 2009-02-07

common/readable.c: Fix a snprintf() with non-constant format string and no
  parameters passed.
Arvid Norlander 2009-02-07

types/detector/detector.c: Fix GCC warning caused by a declaration of an
  unimplemented, unused static function.
Arvid Norlander 2009-02-07

plugins/cfpython/include/cfpython_object_private.h,
  plugins/cfpython/include/cfpython_map_private.h,
  plugins/cfpython/include/cfpython_party_private.h,
  plugins/cfpython/include/cfpython_region_private.h,
  plugins/cfpython/include/cfpython_archetype_private.h,
  plugins/cfpython/cfpython.c: Fix some minor issues (variables that should have
  been static, using 0 instead of NULL [leading to more confusing code]).
Arvid Norlander 2009-02-07

plugins/cfanim/cfanim.c, plugins/cflogger/cflogger.c:  Fix some minor issues
  (variables that should have been static, using 0 instead of NULL, leading to
  more confusing code) found using the static analysis tool "sparse".
Arvid Norlander 2009-02-07

server/init.c: Avoid some warnings by casting function to one with the right
  type before calling. Also convert some char* to const char* and make the
  variable options static.
Arvid Norlander 2009-02-06

server/pets.c, server/player.c, server/plugins.c: Fix some minor issues (such as