@@ -20,12 +20,12 @@ void scroll_failure(object *op, int failure, int power);
 void apply_changes_to_player(object *pl, object *change);
 void legacy_apply_container(object *op, object *sack);
 /* attack.c */
-void save_throw_object(object *op, int type, object *originator);
-int hit_map(object *op, int dir, int type, int full_hit);
+void save_throw_object(object *op, uint32 type, object *originator);
+int hit_map(object *op, int dir, uint32 type, int full_hit);
 int attack_ob(object *op, object *hitter);
 object *hit_with_arrow(object *op, object *victim);
 int friendly_fire(object *op, object *hitter);
-int hit_player(object *op, int dam, object *hitter, int type, int full_hit);
+int hit_player(object *op, int dam, object *hitter, uint32 type, int full_hit);
 void confuse_living(object *op, object *hitter, int dam);
 void blind_living(object *op, object *hitter, int dam);
 void paralyze_living(object *op, object *hitter, int dam);
@@ -605,7 +605,7 @@ object *check_spell_known(object *op, const char *name);
 object *lookup_spell_by_name(object *op, const char *spname);
 int reflwall(mapstruct *m, int x, int y, object *sp_op);
 int cast_create_obj(object *op, object *new_op, int dir);
-int ok_to_put_more(mapstruct *m, sint16 x, sint16 y, object *op, int immune_stop);
+int ok_to_put_more(mapstruct *m, sint16 x, sint16 y, object *op, uint32 immune_stop);
 int fire_arch_from_position(object *op, object *caster, sint16 x, sint16 y, int dir, object *spell);
 void regenerate_rod(object *rod);
 void drain_rod_charge(object *rod);
